parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL

Grammar

Rule 0     S' -> program
Rule 1     program -> config body
Rule 2     config -> configdirective config
Rule 3     config -> empty
Rule 4     configdirective -> VARSCONFIG = options
Rule 5     configdirective -> DECISIONSCONFIG = options
Rule 6     configdirective -> COMPLEXITYCONFIG = optionsyesno
Rule 7     options -> SOME
Rule 8     options -> ALL
Rule 9     options -> MOST
Rule 10    options -> NONE
Rule 11    optionsyesno -> YES
Rule 12    optionsyesno -> NO
Rule 13    body -> declarationsOpt funcsOpt main funcsOpt
Rule 14    funcsOpt -> func funcsOpt
Rule 15    funcsOpt -> empty
Rule 16    declarationsOpt -> declaration declarationsOpt
Rule 17    declarationsOpt -> empty
Rule 18    declaration -> type declarationB
Rule 19    declarationB -> ID dimensionsOpt declarationC
Rule 20    declarationC -> = superexpression declarationD
Rule 21    declarationC -> , declarationB
Rule 22    declarationC -> ;
Rule 23    declarationD -> , declarationB
Rule 24    declarationD -> ;
Rule 25    main -> MAIN ( ) block
Rule 26    func -> DEF returntype ID ( paramsOpt ) block
Rule 27    paramsOpt -> params
Rule 28    paramsOpt -> empty
Rule 29    block -> { instructionsOpt }
Rule 30    instructionsOpt -> instruction instructionsOpt
Rule 31    instructionsOpt -> empty
Rule 32    assign -> ID dimensionsOpt = superexpression
Rule 33    assignB -> dimensionsOpt = superexpression
Rule 34    dimensionsOpt -> dimensions
Rule 35    dimensionsOpt -> empty
Rule 36    condition -> IF ( superexpression ) block else
Rule 37    else -> ELSE block
Rule 38    else -> empty
Rule 39    instruction -> assignfunccall ;
Rule 40    instruction -> output ;
Rule 41    instruction -> input ;
Rule 42    instruction -> return ;
Rule 43    instruction -> declaration
Rule 44    instruction -> condition
Rule 45    instruction -> whileloop
Rule 46    instruction -> forloop
Rule 47    instruction -> localdirective
Rule 48    assignfunccall -> ID assignfunccallB
Rule 49    assignfunccallB -> ( funccallB
Rule 50    assignfunccallB -> assignB
Rule 51    localdirective -> localvardirective
Rule 52    localdirective -> localdecisiondirective
Rule 53    localdirective -> localmsgdirective
Rule 54    superexpression -> expression superexpressionB
Rule 55    superexpressionB -> & & superexpression
Rule 56    superexpressionB -> | | superexpression
Rule 57    superexpressionB -> empty
Rule 58    expression -> exp expressionB
Rule 59    expressionB -> < exp
Rule 60    expressionB -> > exp
Rule 61    expressionB -> < > exp
Rule 62    expressionB -> = = exp
Rule 63    expressionB -> < = exp
Rule 64    expressionB -> > = exp
Rule 65    expressionB -> empty
Rule 66    exp -> term expB
Rule 67    expB -> - exp
Rule 68    expB -> + exp
Rule 69    expB -> empty
Rule 70    term -> factor termB
Rule 71    termB -> / term
Rule 72    termB -> * term
Rule 73    termB -> empty
Rule 74    factor -> signB constant
Rule 75    factor -> ( superexpression )
Rule 76    factor -> funccall
Rule 77    factor -> ID dimensionsOpt
Rule 78    signB -> sign
Rule 79    signB -> empty
Rule 80    constant -> FCONST
Rule 81    constant -> ICONST
Rule 82    constant -> TRUE
Rule 83    constant -> FALSE
Rule 84    sign -> +
Rule 85    sign -> -
Rule 86    whileloop -> WHILE ( superexpression ) block
Rule 87    type -> INT
Rule 88    type -> FLOAT
Rule 89    type -> STRING
Rule 90    returntype -> VOID
Rule 91    returntype -> type
Rule 92    forloop -> FOR ( assign ; superexpression ; superexpression ) block
Rule 93    input -> INPUT ( ID inputB )
Rule 94    inputB -> , ID inputB
Rule 95    inputB -> empty
Rule 96    output -> PRINT ( outputB
Rule 97    outputB -> STRING outputC
Rule 98    outputB -> superexpression outputC
Rule 99    outputC -> )
Rule 100   outputC -> , outputB
Rule 101   localvardirective -> # localvardirectiveB ID
Rule 102   localvardirectiveB -> TRACK
Rule 103   localvardirectiveB -> FORGET
Rule 104   localmsgdirective -> # SHOW STRING
Rule 105   localdecisiondirective -> TRACKDECISION
Rule 106   localdecisiondirective -> FORGETDECISION
Rule 107   localdecisiondirective -> empty
Rule 108   funccall -> ID ( funccallB
Rule 109   funccallB -> superexpression funccallC
Rule 110   funccallB -> )
Rule 111   funccallC -> , superexpression funccallC
Rule 112   funccallC -> )
Rule 113   dimensions -> [ superexpression ] dimensionsB
Rule 114   dimensionsB -> [ superexpression ]
Rule 115   return -> RETURN superexpression
Rule 116   params -> type ID paramsB
Rule 117   paramsB -> , type ID paramsB
Rule 118   paramsB -> empty
Rule 119   empty -> <empty>

Terminals, with rules where they appear

#                    : 101 104
&                    : 55 55
(                    : 25 26 36 49 75 86 92 93 96 108
)                    : 25 26 36 75 86 92 93 99 110 112
*                    : 72
+                    : 68 84
,                    : 21 23 94 100 111 117
-                    : 67 85
/                    : 71
;                    : 22 24 39 40 41 42 92 92
<                    : 59 61 63
=                    : 4 5 6 20 32 33 62 62 63 64
>                    : 60 61 64
ALL                  : 8
BOOL                 : 
COMPLEXITYCONFIG     : 6
DECISIONSCONFIG      : 5
DEF                  : 26
ELSE                 : 37
FALSE                : 83
FCONST               : 80
FLOAT                : 88
FOR                  : 92
FORGET               : 103
FORGETDECISION       : 106
ICONST               : 81
ID                   : 19 26 32 48 77 93 94 101 108 116 117
IF                   : 36
INPUT                : 93
INT                  : 87
MAIN                 : 25
MOST                 : 9
NO                   : 12
NONE                 : 10
PRINT                : 96
RETURN               : 115
SHOW                 : 104
SOME                 : 7
STRING               : 89 97 104
TRACK                : 102
TRACKDECISION        : 105
TRUE                 : 82
VARSCONFIG           : 4
VOID                 : 90
WHILE                : 86
YES                  : 11
[                    : 113 114
]                    : 113 114
error                : 
{                    : 29
|                    : 56 56
}                    : 29

Nonterminals, with rules where they appear

assign               : 92
assignB              : 50
assignfunccall       : 39
assignfunccallB      : 48
block                : 25 26 36 37 86 92
body                 : 1
condition            : 44
config               : 1 2
configdirective      : 2
constant             : 74
declaration          : 16 43
declarationB         : 18 21 23
declarationC         : 19
declarationD         : 20
declarationsOpt      : 13 16
dimensions           : 34
dimensionsB          : 113
dimensionsOpt        : 19 32 33 77
else                 : 36
empty                : 3 15 17 28 31 35 38 57 65 69 73 79 95 107 118
exp                  : 58 59 60 61 62 63 64 67 68
expB                 : 66
expression           : 54
expressionB          : 58
factor               : 70
forloop              : 46
func                 : 14
funccall             : 76
funccallB            : 49 108
funccallC            : 109 111
funcsOpt             : 13 13 14
input                : 41
inputB               : 93 94
instruction          : 30
instructionsOpt      : 29 30
localdecisiondirective : 52
localdirective       : 47
localmsgdirective    : 53
localvardirective    : 51
localvardirectiveB   : 101
main                 : 13
options              : 4 5
optionsyesno         : 6
output               : 40
outputB              : 96 100
outputC              : 97 98
params               : 27
paramsB              : 116 117
paramsOpt            : 26
program              : 0
return               : 42
returntype           : 26
sign                 : 78
signB                : 74
superexpression      : 20 32 33 36 55 56 75 86 92 92 98 109 111 113 114 115
superexpressionB     : 54
term                 : 66 71 72
termB                : 70
type                 : 18 91 116 117
whileloop            : 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . config body
    (2) config -> . configdirective config
    (3) config -> . empty
    (4) configdirective -> . VARSCONFIG = options
    (5) configdirective -> . DECISIONSCONFIG = options
    (6) configdirective -> . COMPLEXITYCONFIG = optionsyesno
    (119) empty -> .

    VARSCONFIG      shift and go to state 2
    DECISIONSCONFIG shift and go to state 1
    COMPLEXITYCONFIG shift and go to state 4
    INT             reduce using rule 119 (empty -> .)
    FLOAT           reduce using rule 119 (empty -> .)
    STRING          reduce using rule 119 (empty -> .)
    DEF             reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)

    configdirective                shift and go to state 3
    program                        shift and go to state 5
    config                         shift and go to state 6
    empty                          shift and go to state 7

state 1

    (5) configdirective -> DECISIONSCONFIG . = options

    =               shift and go to state 8


state 2

    (4) configdirective -> VARSCONFIG . = options

    =               shift and go to state 9


state 3

    (2) config -> configdirective . config
    (2) config -> . configdirective config
    (3) config -> . empty
    (4) configdirective -> . VARSCONFIG = options
    (5) configdirective -> . DECISIONSCONFIG = options
    (6) configdirective -> . COMPLEXITYCONFIG = optionsyesno
    (119) empty -> .

    VARSCONFIG      shift and go to state 2
    DECISIONSCONFIG shift and go to state 1
    COMPLEXITYCONFIG shift and go to state 4
    INT             reduce using rule 119 (empty -> .)
    FLOAT           reduce using rule 119 (empty -> .)
    STRING          reduce using rule 119 (empty -> .)
    DEF             reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)

    config                         shift and go to state 10
    empty                          shift and go to state 7
    configdirective                shift and go to state 3

state 4

    (6) configdirective -> COMPLEXITYCONFIG . = optionsyesno

    =               shift and go to state 11


state 5

    (0) S' -> program .



state 6

    (1) program -> config . body
    (13) body -> . declarationsOpt funcsOpt main funcsOpt
    (16) declarationsOpt -> . declaration declarationsOpt
    (17) declarationsOpt -> . empty
    (18) declaration -> . type declarationB
    (119) empty -> .
    (87) type -> . INT
    (88) type -> . FLOAT
    (89) type -> . STRING

    DEF             reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 17
    STRING          shift and go to state 14

    body                           shift and go to state 12
    declarationsOpt                shift and go to state 13
    type                           shift and go to state 16
    declaration                    shift and go to state 18
    empty                          shift and go to state 19

state 7

    (3) config -> empty .

    INT             reduce using rule 3 (config -> empty .)
    FLOAT           reduce using rule 3 (config -> empty .)
    STRING          reduce using rule 3 (config -> empty .)
    DEF             reduce using rule 3 (config -> empty .)
    MAIN            reduce using rule 3 (config -> empty .)


state 8

    (5) configdirective -> DECISIONSCONFIG = . options
    (7) options -> . SOME
    (8) options -> . ALL
    (9) options -> . MOST
    (10) options -> . NONE

    SOME            shift and go to state 21
    ALL             shift and go to state 20
    MOST            shift and go to state 23
    NONE            shift and go to state 22

    options                        shift and go to state 24

state 9

    (4) configdirective -> VARSCONFIG = . options
    (7) options -> . SOME
    (8) options -> . ALL
    (9) options -> . MOST
    (10) options -> . NONE

    SOME            shift and go to state 21
    ALL             shift and go to state 20
    MOST            shift and go to state 23
    NONE            shift and go to state 22

    options                        shift and go to state 25

state 10

    (2) config -> configdirective config .

    INT             reduce using rule 2 (config -> configdirective config .)
    FLOAT           reduce using rule 2 (config -> configdirective config .)
    STRING          reduce using rule 2 (config -> configdirective config .)
    DEF             reduce using rule 2 (config -> configdirective config .)
    MAIN            reduce using rule 2 (config -> configdirective config .)


state 11

    (6) configdirective -> COMPLEXITYCONFIG = . optionsyesno
    (11) optionsyesno -> . YES
    (12) optionsyesno -> . NO

    YES             shift and go to state 26
    NO              shift and go to state 28

    optionsyesno                   shift and go to state 27

state 12

    (1) program -> config body .

    $end            reduce using rule 1 (program -> config body .)


state 13

    (13) body -> declarationsOpt . funcsOpt main funcsOpt
    (14) funcsOpt -> . func funcsOpt
    (15) funcsOpt -> . empty
    (26) func -> . DEF returntype ID ( paramsOpt ) block
    (119) empty -> .

    DEF             shift and go to state 32
    MAIN            reduce using rule 119 (empty -> .)

    funcsOpt                       shift and go to state 29
    func                           shift and go to state 31
    empty                          shift and go to state 30

state 14

    (89) type -> STRING .

    ID              reduce using rule 89 (type -> STRING .)


state 15

    (87) type -> INT .

    ID              reduce using rule 87 (type -> INT .)


state 16

    (18) declaration -> type . declarationB
    (19) declarationB -> . ID dimensionsOpt declarationC

    ID              shift and go to state 34

    declarationB                   shift and go to state 33

state 17

    (88) type -> FLOAT .

    ID              reduce using rule 88 (type -> FLOAT .)


state 18

    (16) declarationsOpt -> declaration . declarationsOpt
    (16) declarationsOpt -> . declaration declarationsOpt
    (17) declarationsOpt -> . empty
    (18) declaration -> . type declarationB
    (119) empty -> .
    (87) type -> . INT
    (88) type -> . FLOAT
    (89) type -> . STRING

    DEF             reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 17
    STRING          shift and go to state 14

    declarationsOpt                shift and go to state 35
    type                           shift and go to state 16
    empty                          shift and go to state 19
    declaration                    shift and go to state 18

state 19

    (17) declarationsOpt -> empty .

    DEF             reduce using rule 17 (declarationsOpt -> empty .)
    MAIN            reduce using rule 17 (declarationsOpt -> empty .)


state 20

    (8) options -> ALL .

    VARSCONFIG      reduce using rule 8 (options -> ALL .)
    DECISIONSCONFIG reduce using rule 8 (options -> ALL .)
    COMPLEXITYCONFIG reduce using rule 8 (options -> ALL .)
    INT             reduce using rule 8 (options -> ALL .)
    FLOAT           reduce using rule 8 (options -> ALL .)
    STRING          reduce using rule 8 (options -> ALL .)
    DEF             reduce using rule 8 (options -> ALL .)
    MAIN            reduce using rule 8 (options -> ALL .)


state 21

    (7) options -> SOME .

    VARSCONFIG      reduce using rule 7 (options -> SOME .)
    DECISIONSCONFIG reduce using rule 7 (options -> SOME .)
    COMPLEXITYCONFIG reduce using rule 7 (options -> SOME .)
    INT             reduce using rule 7 (options -> SOME .)
    FLOAT           reduce using rule 7 (options -> SOME .)
    STRING          reduce using rule 7 (options -> SOME .)
    DEF             reduce using rule 7 (options -> SOME .)
    MAIN            reduce using rule 7 (options -> SOME .)


state 22

    (10) options -> NONE .

    VARSCONFIG      reduce using rule 10 (options -> NONE .)
    DECISIONSCONFIG reduce using rule 10 (options -> NONE .)
    COMPLEXITYCONFIG reduce using rule 10 (options -> NONE .)
    INT             reduce using rule 10 (options -> NONE .)
    FLOAT           reduce using rule 10 (options -> NONE .)
    STRING          reduce using rule 10 (options -> NONE .)
    DEF             reduce using rule 10 (options -> NONE .)
    MAIN            reduce using rule 10 (options -> NONE .)


state 23

    (9) options -> MOST .

    VARSCONFIG      reduce using rule 9 (options -> MOST .)
    DECISIONSCONFIG reduce using rule 9 (options -> MOST .)
    COMPLEXITYCONFIG reduce using rule 9 (options -> MOST .)
    INT             reduce using rule 9 (options -> MOST .)
    FLOAT           reduce using rule 9 (options -> MOST .)
    STRING          reduce using rule 9 (options -> MOST .)
    DEF             reduce using rule 9 (options -> MOST .)
    MAIN            reduce using rule 9 (options -> MOST .)


state 24

    (5) configdirective -> DECISIONSCONFIG = options .

    VARSCONFIG      reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    DECISIONSCONFIG reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    COMPLEXITYCONFIG reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    INT             reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    FLOAT           reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    STRING          reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    DEF             reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)
    MAIN            reduce using rule 5 (configdirective -> DECISIONSCONFIG = options .)


state 25

    (4) configdirective -> VARSCONFIG = options .

    VARSCONFIG      reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    DECISIONSCONFIG reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    COMPLEXITYCONFIG reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    INT             reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    FLOAT           reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    STRING          reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    DEF             reduce using rule 4 (configdirective -> VARSCONFIG = options .)
    MAIN            reduce using rule 4 (configdirective -> VARSCONFIG = options .)


state 26

    (11) optionsyesno -> YES .

    VARSCONFIG      reduce using rule 11 (optionsyesno -> YES .)
    DECISIONSCONFIG reduce using rule 11 (optionsyesno -> YES .)
    COMPLEXITYCONFIG reduce using rule 11 (optionsyesno -> YES .)
    INT             reduce using rule 11 (optionsyesno -> YES .)
    FLOAT           reduce using rule 11 (optionsyesno -> YES .)
    STRING          reduce using rule 11 (optionsyesno -> YES .)
    DEF             reduce using rule 11 (optionsyesno -> YES .)
    MAIN            reduce using rule 11 (optionsyesno -> YES .)


state 27

    (6) configdirective -> COMPLEXITYCONFIG = optionsyesno .

    VARSCONFIG      reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    DECISIONSCONFIG reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    COMPLEXITYCONFIG reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    INT             reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    FLOAT           reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    STRING          reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    DEF             reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)
    MAIN            reduce using rule 6 (configdirective -> COMPLEXITYCONFIG = optionsyesno .)


state 28

    (12) optionsyesno -> NO .

    VARSCONFIG      reduce using rule 12 (optionsyesno -> NO .)
    DECISIONSCONFIG reduce using rule 12 (optionsyesno -> NO .)
    COMPLEXITYCONFIG reduce using rule 12 (optionsyesno -> NO .)
    INT             reduce using rule 12 (optionsyesno -> NO .)
    FLOAT           reduce using rule 12 (optionsyesno -> NO .)
    STRING          reduce using rule 12 (optionsyesno -> NO .)
    DEF             reduce using rule 12 (optionsyesno -> NO .)
    MAIN            reduce using rule 12 (optionsyesno -> NO .)


state 29

    (13) body -> declarationsOpt funcsOpt . main funcsOpt
    (25) main -> . MAIN ( ) block

    MAIN            shift and go to state 36

    main                           shift and go to state 37

state 30

    (15) funcsOpt -> empty .

    MAIN            reduce using rule 15 (funcsOpt -> empty .)
    $end            reduce using rule 15 (funcsOpt -> empty .)


state 31

    (14) funcsOpt -> func . funcsOpt
    (14) funcsOpt -> . func funcsOpt
    (15) funcsOpt -> . empty
    (26) func -> . DEF returntype ID ( paramsOpt ) block
    (119) empty -> .

    DEF             shift and go to state 32
    MAIN            reduce using rule 119 (empty -> .)
    $end            reduce using rule 119 (empty -> .)

    funcsOpt                       shift and go to state 38
    empty                          shift and go to state 30
    func                           shift and go to state 31

state 32

    (26) func -> DEF . returntype ID ( paramsOpt ) block
    (90) returntype -> . VOID
    (91) returntype -> . type
    (87) type -> . INT
    (88) type -> . FLOAT
    (89) type -> . STRING

    VOID            shift and go to state 39
    INT             shift and go to state 15
    FLOAT           shift and go to state 17
    STRING          shift and go to state 14

    returntype                     shift and go to state 40
    type                           shift and go to state 41

state 33

    (18) declaration -> type declarationB .

    INT             reduce using rule 18 (declaration -> type declarationB .)
    FLOAT           reduce using rule 18 (declaration -> type declarationB .)
    STRING          reduce using rule 18 (declaration -> type declarationB .)
    DEF             reduce using rule 18 (declaration -> type declarationB .)
    MAIN            reduce using rule 18 (declaration -> type declarationB .)
    ID              reduce using rule 18 (declaration -> type declarationB .)
    PRINT           reduce using rule 18 (declaration -> type declarationB .)
    INPUT           reduce using rule 18 (declaration -> type declarationB .)
    RETURN          reduce using rule 18 (declaration -> type declarationB .)
    IF              reduce using rule 18 (declaration -> type declarationB .)
    WHILE           reduce using rule 18 (declaration -> type declarationB .)
    FOR             reduce using rule 18 (declaration -> type declarationB .)
    #               reduce using rule 18 (declaration -> type declarationB .)
    TRACKDECISION   reduce using rule 18 (declaration -> type declarationB .)
    FORGETDECISION  reduce using rule 18 (declaration -> type declarationB .)
    }               reduce using rule 18 (declaration -> type declarationB .)


state 34

    (19) declarationB -> ID . dimensionsOpt declarationC
    (34) dimensionsOpt -> . dimensions
    (35) dimensionsOpt -> . empty
    (113) dimensions -> . [ superexpression ] dimensionsB
    (119) empty -> .

    [               shift and go to state 44
    =               reduce using rule 119 (empty -> .)
    ,               reduce using rule 119 (empty -> .)
    ;               reduce using rule 119 (empty -> .)

    dimensionsOpt                  shift and go to state 42
    dimensions                     shift and go to state 43
    empty                          shift and go to state 45

state 35

    (16) declarationsOpt -> declaration declarationsOpt .

    DEF             reduce using rule 16 (declarationsOpt -> declaration declarationsOpt .)
    MAIN            reduce using rule 16 (declarationsOpt -> declaration declarationsOpt .)


state 36

    (25) main -> MAIN . ( ) block

    (               shift and go to state 46


state 37

    (13) body -> declarationsOpt funcsOpt main . funcsOpt
    (14) funcsOpt -> . func funcsOpt
    (15) funcsOpt -> . empty
    (26) func -> . DEF returntype ID ( paramsOpt ) block
    (119) empty -> .

    DEF             shift and go to state 32
    $end            reduce using rule 119 (empty -> .)

    funcsOpt                       shift and go to state 47
    func                           shift and go to state 31
    empty                          shift and go to state 30

state 38

    (14) funcsOpt -> func funcsOpt .

    MAIN            reduce using rule 14 (funcsOpt -> func funcsOpt .)
    $end            reduce using rule 14 (funcsOpt -> func funcsOpt .)


state 39

    (90) returntype -> VOID .

    ID              reduce using rule 90 (returntype -> VOID .)


state 40

    (26) func -> DEF returntype . ID ( paramsOpt ) block

    ID              shift and go to state 48


state 41

    (91) returntype -> type .

    ID              reduce using rule 91 (returntype -> type .)


state 42

    (19) declarationB -> ID dimensionsOpt . declarationC
    (20) declarationC -> . = superexpression declarationD
    (21) declarationC -> . , declarationB
    (22) declarationC -> . ;

    =               shift and go to state 49
    ,               shift and go to state 50
    ;               shift and go to state 51

    declarationC                   shift and go to state 52

state 43

    (34) dimensionsOpt -> dimensions .

    =               reduce using rule 34 (dimensionsOpt -> dimensions .)
    /               reduce using rule 34 (dimensionsOpt -> dimensions .)
    *               reduce using rule 34 (dimensionsOpt -> dimensions .)
    -               reduce using rule 34 (dimensionsOpt -> dimensions .)
    +               reduce using rule 34 (dimensionsOpt -> dimensions .)
    <               reduce using rule 34 (dimensionsOpt -> dimensions .)
    >               reduce using rule 34 (dimensionsOpt -> dimensions .)
    &               reduce using rule 34 (dimensionsOpt -> dimensions .)
    |               reduce using rule 34 (dimensionsOpt -> dimensions .)
    ]               reduce using rule 34 (dimensionsOpt -> dimensions .)
    ,               reduce using rule 34 (dimensionsOpt -> dimensions .)
    ;               reduce using rule 34 (dimensionsOpt -> dimensions .)
    )               reduce using rule 34 (dimensionsOpt -> dimensions .)


state 44
